@startuml

class CollisionResult <<struct>> {
    +collided : bool
    +contactTime : float
    +contactNormal : Vector2
    +contactPoint : Vector2
}

class PhysicsSystem {
    -tileMap : *TileMap
    +resolveEntityTileCollision(e : DynamicEntity*) : void
    +checkAABBOverlap(a : Rectangle, b : Rectangle) : bool
    +sweepAABB(e : DynamicEntity*, dt : float) : CollisionResult
}

PhysicsSystem o-- TileMap : tileMap
PhysicsSystem ..> CollisionResult : returns
PhysicsSystem ..> DynamicEntity : resolves

@enduml